# learningcpp

news/: CMakeLists.txt  Makefile  feedparser.cpp  feedparser.h  main.cpp  newsstory.cpp  newsstory.h  out  readme.MD  readme_tmp.html  trigger.cpp  trigger.h  trigger_test.cpp  triggers.txt  utils.cpp  utils.h
